--- a/CHANGES
+++ b/CHANGES
@@ -1,4 +1,12 @@
-0.2
+0.2.1 - 2020-11-25
+  Now works with Python 3. Also, Python 2 support is dropped.
+
+  Reads from stdin when run as standalone program (instead of reading
+  test.lisp).
+
+  (All changes suggested by Avatar Ben crowell, issue #1.)
+
+0.2 - 2006
   Complete rewrite. Now parses lisp directly, instead of using the
   shlex tokenizer.
 
